# holmesnyangz

./: .gitignore  DATA_FLOW_ANALYSIS.md  Enhanced_plan.md  README.md  SYSTEM_FLOW_DIAGRAM.md  backend_readme.md  check_config.py  frontend_readme.md  implementation_plan_hnz.md  langgraph_0.6.6_complete_guide.md  plan_of_progress_flow_v2.md  requirements.txt  rule_hnz.md  run_hn.py  run_validation_test.bat  test_full_flow.py  test_legal_final.py
backend/: .env.example  CHECK_DATA.bat  DB_SCHEMA_ALIGNMENT_REPORT_251017.md  EXECUTION_GUIDE.md  GIT_BASH_GUIDE.md  METADATA_ANALYSIS_REPORT.md  METADATA_ANALYSIS_SUMMARY.md  QUICK_CHECK_GUIDE.md  SETUP_GUIDE.md  SIMPLE_GUIDE.md  __init__.py  add_missing_columns.sql  analyze_chunk_metadata.py  check_all_data.py  check_existing_sessions.sql  create_memory_tables.py  create_schema.py  fix_db_schema.py  fix_db_schema_sync.py  langgraph.json  langgraph_app.py  main.py  migrate_chat_to_session.sql  pyproject.toml  quick_check.sql  run_migration.sh  search_result_20251002_210746.json  search_result_20251002_212813.json  search_result_20251002_212921.json  test_legal_search_improvements.py  test_simple_session.py  test_state_context_validation.py  test_structured_response.py  test_websocket_structured.py
backend/.claude/: settings.local.json
backend/agents/: __init__.py  analyzer_agent.py  base_agent.py  finance_agent.py  legal_agent.py  location_agent.py  planner_agent.py  price_search_agent.py  supervisor_agent.py
backend/api/: __init__.py  data_routes.py  models.py  routes.py
backend/app/: main.py
backend/config/: __init__.py  (+4 more)
(+575 files in other folders)
