[project]
name = "backend"
version = "0.1.0"
description = "부동산 AI 챗봇 도와줘 홈즈냥즈"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.117.1",
    "pandas>=2.2.3",
    "psycopg2>=2.9.10",
    "publicdatareader>=1.1.1.post2",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.43",
]
